@@ -149,6 +149,7 @@ production.
 * (bug 32086) Special:PermanentLink now show an error message when no subpage
   was specified.
 * (bug 30368) Special:Newpages now shows the new page name for moved pages
+* (bug 1697) The way to search blocked usernames in block log should be clearer
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
